<resources>
    <string name="facebook_app_id">1801146560207547</string>

    <string name="app_name">brü</string>
    <string name="news_feed">news feed</string>
    <string name="on_tap">on tap</string>
    <string name="settings">settings</string>
    <string name="log_out">log out</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_submit">Log in</string>
    <string name="create_an_account">Don\'t have an account? Sign up!</string>
    <string name="access_denied">Please log in first.</string>
    <string name="log_in">log in</string>
    <string name="or">or</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="log_in_account">Already have an account? Sign in</string>
    <string name="login_name">Your name</string>
    <string name="login_repeat_password">Repeat password</string>
    <string name="registration_submit">Create an account</string>
    <string name="add_new_post_hint">Say something…</string>
    <string name="send">Send</string>
    <string name="attach">Attach photo</string>
    <string name="account">account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="photo">Photo</string>
    <string name="receive_notifications">Receive notifications when beers are on tap?</string>
    <string name="support">support</string>
    <string name="rate">Rate Our App</string>
    <string name="about">About brü</string>
    <string name="notifications">Notifications</string>
    <string name="edit">edit</string>
    <string name="edit_name">Edit your name</string>
    <string name="edit_email">Edit your email</string>
    <string name="hours">Hours:</string>
    <string name="cans">cans</string>
    <string name="growlers">growlers</string>
    <string name="draft">draft</string>
    <string name="no_beers">No beers available</string>
    <string name="no_beers_desc">You\'ll get a notification about any updates.</string>
    <string name="banner_ad_unit_id">ca-app-pub-1761468736156699/8515871167</string>
    <string name="skip">Got it</string>
    <string name="last_updated">Last updated:</string>
    <string name="settings_about_copyright">Copyright © 2020 MoyerSoftware LLC
        \nhttp://www.MoyerSoftware.com
    </string>
    <string name="settings_about_affiliation">This app has no affiliation with Tree House Brewing Company out of Charlton, MA. We created this app strictly for the love of their creations and the never-ending pressing of the refresh button on our keyboards.</string>
    <string name="rating">Rating: %1$s</string>
    <string name="votes">/ %1$d %2$s</string>
    <string name="brus">brüs</string>
    <string name="change_rating">Change Your Rating</string>
    <string name="no_ratings">No Ratings Yet</string>
    <string name="pints">pints</string>
</resources>
