<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingBottom="48dp"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coustard"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/name"
                style="@style/EditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="4dp"
                android:drawableStart="@drawable/login_name"
                android:drawableLeft="@drawable/login_name"
                android:drawablePadding="16dp"
                android:fontFamily="@font/average_sans"
                android:hint="@string/login_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                style="@style/EditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:drawableStart="@drawable/login_email"
                android:drawableLeft="@drawable/login_email"
                android:drawablePadding="16dp"
                android:fontFamily="@font/average_sans"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password"
                style="@style/EditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:drawableStart="@drawable/login_password"
                android:drawableLeft="@drawable/login_password"
                android:drawablePadding="16dp"
                android:fontFamily="@font/average_sans"
                android:hint="@string/login_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/repeat_password"
                style="@style/EditText.Light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="4dp"
                android:drawableStart="@drawable/login_password"
                android:drawableLeft="@drawable/login_password"
                android:drawablePadding="16dp"
                android:fontFamily="@font/average_sans"
                android:hint="@string/login_repeat_password"
                android:inputType="textPassword" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/average_sans"
                android:onClick="onRegistrationButtonClicked"
                android:stateListAnimator="@null"
                android:text="@string/registration_submit"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:theme="@style/Button_Host"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:layout_marginBottom="48dp"
        android:background="@android:color/white" />

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="24dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:fontFamily="@font/average_sans"
        android:gravity="center"
        android:onClick="onLoginButtonClicked"
        android:text="@string/log_in_account"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</FrameLayout>