<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="36dp"
        android:paddingRight="36dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/coustard"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="48sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                style="@style/EditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="4dp"
            android:drawableStart="@drawable/login_email"
            android:drawableLeft="@drawable/login_email"
            android:drawablePadding="16dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/EditText.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="4dp"
            android:drawableStart="@drawable/login_password"
            android:drawableLeft="@drawable/login_password"
            android:drawablePadding="16dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button

            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/average_sans"
            android:onClick="onLoginButtonClicked"
            android:stateListAnimator="@null"
            android:text="@string/login_submit"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:theme="@style/Button_Host"
            tools:targetApi="lollipop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="48dp"
                android:layout_marginRight="48dp"
                android:fontFamily="@font/average_sans"
                android:text="@string/or"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:alpha="0.5"
                android:background="@android:color/white" />
        </LinearLayout>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="?selectableItemBackground"
            android:clickable="true"
            android:drawableStart="@drawable/facebook"
            android:drawableLeft="@drawable/facebook"
            android:drawablePadding="16dp"
            android:fontFamily="@font/average_sans"
            android:onClick="onFacebookButtonClicked"
            android:paddingLeft="24dp"
            android:paddingTop="16dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:text="@string/connect_with_facebook"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

<View
    android:layout_width="match_parent"
    android:layout_height="1px"
    android:layout_gravity="bottom"
    android:layout_marginBottom="48dp"
    android:background="@android:color/white" />

<TextView
    android:id="@+id/sign_up"
    android:layout_width="match_parent"
    android:layout_height="48dp"
    android:layout_gravity="bottom"
    android:layout_marginTop="24dp"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:fontFamily="@font/average_sans"
    android:gravity="center"
    android:onClick="onRegistrationButtonClicked"
    android:text="@string/create_an_account"
    android:textColor="@android:color/white"
    android:textSize="16sp" />
</FrameLayout>