<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coustard"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/aboutVersionTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/average_sans"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="normal|bold"
        tools:text="1.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/average_sans"
        android:lineSpacingExtra="2dp"
        android:text="@string/settings_about_affiliation"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_text"
        android:textSize="12sp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="@font/average_sans"
        android:lineSpacingExtra="2dp"
        android:text="@string/settings_about_copyright"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="14sp"
        tools:ignore="MissingPrefix" />
</LinearLayout>